tests/fixtures/invalid/pow_none_none_bool.py
# Cannot call pow() with None, None, Bool
x = pow(None, None, True)
